feat: add getByConfigId to v1 (#7)
