# src/main/openapi/search-config-openapi-v1.yaml
@@ -36,6 +36,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
   /v1/searchConfig/{configId}:
+    get:
+      tags:
+        - SearchConfig
+      summary: Finds search config by it's configId.
+      description: Gets the search config by it's configId.
+      operationId: getConfigByConfigId
+      parameters:
+        - name: configId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchConfig'
+        "404":
+          description: Not found
     put:
       tags:
         - SearchConfig
